--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,14 +1,15 @@
-@impot "./Lib/_funciones.sass"
-@impot "./Lib/_mixins.sass"
-@impot "./Lib/_variables.sass"
+@import "./Lib/_variables.sass"
+@import "./Lib/_mixins.sass"
+@import "./Lib/_funciones.sass"
 
-@impot "./Componentes/_grid.sass"
-@impot "./Componentes/_utilities.sass"
+@import "./Componentes/_grid.sass"
+@import "./Componentes/_utilities.sass"
     
-@impot "./Base/_botones.sass"
-@impot "./Base/_links.sass"
-@impot "./Base/_tablas.sass"
-@impot "./Base/_tipografias.sass"
 
-@impot "./Layout/_blocks.sass"
-@impot "./Layout/_side.sass"
+@import "./Layout/_blocks.sass"
+@import "./Layout/_side.sass"
+
+@import "./Base/_botones.sass"
+@import "./Base/_links.sass"
+@import "./Base/_tablas.sass"
+@import "./Base/_tipografias.sass"
