--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,39 @@
-@impot "./Lib/_funciones.sass" {}@impot "./Lib/_mixins.sass" {}@impot "./Lib/_variables.sass" {}@impot "./Componentes/_grid.sass" {}@impot "./Componentes/_utilities.sass" {}@impot "./Base/_botones.sass" {}@impot "./Base/_links.sass" {}@impot "./Base/_tablas.sass" {}@impot "./Base/_tipografias.sass" {}@impot "./Layout/_blocks.sass" {}@impot "./Layout/_side.sass" {}
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #757c76a9;
+  color: rgba(245, 245, 245, 0.719);
+}
+
+.header {
+  width: 100%;
+  height: 100vh;
+  margin: 10px 20px 30px;
+}
+
+.header__login {
+  background-color: rgba(234, 235, 0, 0.7);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.btn {
+  display: inline-block;
+  color: white;
+  background-color: #ea83ee;
+  line-height: 2.5;
+  border-radius: 3px;
+  font-size: 24px;
+}
+
+.btn__icon {
+  font-size: .6em;
+}
+
+.btn.btn--info {
+  background-color: #42b8dd;
+}
