--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -8,6 +7,9 @@
 body {
   background-color: #757c76a9;
   color: rgba(245, 245, 245, 0.719);
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
@@ -15,10 +17,21 @@ body {
   height: 100vh;
   margin: 10px 20px 30px;
 }
-
 .header__login {
-  background-color: rgba(234, 235, 0, 0.7);
+  background-color: rgba(234, 235, 255, 0.7);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.section {
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #ccc0a0;
+}
+@media screen and (min-width: 800px) {
+  .section {
+    background: #fff000;
+  }
 }
 
 .btn {
@@ -29,11 +42,9 @@ body {
   border-radius: 3px;
   font-size: 24px;
 }
-
 .btn__icon {
-  font-size: .6em;
+  font-size: 0.6em;
 }
-
 .btn.btn--info {
   background-color: #42b8dd;
 }
