--- a/sass/Layout/_side.sass
+++ b/sass/Layout/_side.sass
@@ -5,6 +5,7 @@
 
 body 
     background-color: #757c76a9
+    z-index: z-index(layer-2)
     color: rgba(245, 245, 245, 0.719)
     @include max-width()
 
@@ -12,12 +13,19 @@ body
     width: 100%
     height: 100vh
     margin: 10px 20px 30px
+    z-index: z-index(layer-1)
     &__login
         background-color: rgba(234, 235, 256, 0.7)
         font-family: Verdana, Geneva, Tahoma, sans-serif
 
+   
+
 .section
     @include max-width()
     background: #ccc0a0
+    z-index: z-index(layer-3)
+    padding: suma(10px, 15px)
+    font-size: map-get($fs, small)
     @include respond-to(800px)
         background: #fff000
+        z-index: z-index(layer-4)
